# ecsim

./: .gitignore  .gitmodules  Cargo.toml  README.md  banks.sh  gpio.sh
examples/: pmc.rs
examples/support/: mod.rs
src/: ec.rs  iram.rs  main.rs  socket.rs  spi.rs  xram.rs
src/cmd/: int.rs  kbc.rs  mod.rs  pmc.rs
src/ec/: mod.rs
src/ec/ene/: mod.rs  xram.rs
src/ec/ite/: mod.rs  xram.rs
tests/: Makefile  simple.c
tests/include/: gctrl.h  gpio.h  kbc.h  kbscan.h  pmc.h  ps2.h  signature.h
