[package]
name = "ecsim"
version = "0.1.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2018"

[dependencies]
area8051 = { path = "area8051" }
ctrlc = "3.1.3"
liner = { git = "https://gitlab.redox-os.org/redox-os/liner.git" }

[features]
default = []
debug = ["area8051/debug"]
debug_socket = []
debug_spi = []
debug_xram = []
